RESOLVED FIXED25094
media/video-size-intrinsic-scale.html fails on Windows
https://bugs.webkit.org/show_bug.cgi?id=25094
Summary media/video-size-intrinsic-scale.html fails on Windows
Adam Roben (:aroben)
Reported 2009-04-08 09:27:05 PDT
To reproduce: 1. run-webkit-tests media/video-size-intrinsic-scale.html The test fails. You can see the diff of the failure here: <http://build.webkit.org/results/Windows%20Release%20(Tests)/r42320%20(45)/media/video-size-intrinsic-scale-diffs.txt>.
Attachments
Dave Hyatt
Comment 1 2009-04-08 09:31:52 PDT
Adam Roben (:aroben)
Comment 2 2009-04-08 12:19:16 PDT
This is due to a bug in WebKit, not a bug in the test. The end-user effect of this bug is that videos which are saved with a non-identity scaling transformation will display at the wrong size. However, Eric Carlson says that few videos are actually saved like this, so this will probably not affect many users/videos.
Eric Carlson
Comment 3 2009-04-28 11:07:52 PDT
Note You need to log in before you can comment on or make changes to this bug.